--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,7 +5,7 @@
       rgba($themeClrPrimary, 0.8),
       rgba($themeClrPrimary, 0.8)
     ),
-    url(https://explosivemine.github.io/explosivemines.github.io/assets/svg/common-bg.svg);
+    url(https://explosivemine.github.io/portfolio/assets/svg/common-bg.svg);
   background-position: center;
 
   height: 100vh;
@@ -193,7 +193,7 @@
       rgba($themeClrPrimary, 0.8),
       rgba($themeClrPrimary, 0.8)
     ),
-    url(https://explosivemine.github.io/explosivemines.github.io/assets/svg/common-bg.svg);
+    url(https://explosivemine.github.io/portfolio/assets/svg/common-bg.svg);
   background-size: cover;
   background-position: center;
 
