--- a/css/style.css
+++ b/css/style.css
@@ -442,6 +442,18 @@ textarea {
       .project-details__content-title {
         font-size: 2.4rem; } }
 
+.project-links__content {
+  padding: 1rem 0;
+  max-width: 90rem;
+  margin: auto; }
+  .project-details__content-title {
+    font-weight: 700;
+    font-size: 2.8rem;
+    margin-bottom: 3rem; }
+    @media only screen and (max-width: 37.5em) {
+      .project-details__content-title {
+        font-size: 2.4rem; } }
+
 .project-details__showcase-img-cont {
   width: 100%;
   margin-bottom: 6rem; }
@@ -450,6 +462,11 @@ textarea {
   width: 100%; }
 
 .project-details__content-main {
+  width: 100%;
+  max-width: 70rem;
+  margin: auto; }
+
+.project-links__content-main {
   width: 100%;
   max-width: 70rem;
   margin: auto; }
