--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,10 @@ textarea {
   width: 100%;
   margin-bottom: 6rem; }
 
+.project-links__showcase-gif {
+  width: 100%;
+  margin-bottom: 6rem; }
+
 .project-details__showcase-img {
   width: 100%; }
 
