--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,12 @@ textarea {
     .sec-pad {
       padding: 8rem 0; } }
 
+.project-sec-pad {
+  padding: 8rem 0; }
+  @media only screen and (max-width: 56.25em) {
+    .project-sec-pad {
+      padding: 5rem 0; } }
+
 .text-primary {
   color: #fff;
   font-size: 2.2rem;
